# stockpile

./: .coverage  .gitignore  README.md  config.example.toml  pyproject.toml
.claude/skills/stock-analysis-report/: SKILL.md
.github/workflows/: ci.yml
docs/: README.md  design.md  design_en.md  example_analysis.md  example_analysis_en.md
docs/methodology/: financial_metrics.md  screening_criteria.md
docs/reports/2026/03/: jp_bluechip_screening.md  us_bigtech_comparison.md
docs/reports/2026/04/: us_net_analysis.md
src/stockpile/: __init__.py  analysis.py  config.py  models.py  registry.py
src/stockpile/cli/: app.py  config_cmd.py  formatters.py  fundamentals.py  macro.py  metrics.py  news.py  price.py
src/stockpile/providers/: base.py  fred_provider.py  news_provider.py  yfinance_provider.py
src/stockpile/storage/: base.py  sqlite.py
tests/: conftest.py  test_analysis.py  test_config.py  test_models.py  test_registry.py
tests/test_cli/: conftest.py  test_config_cmd.py  test_formatters.py  test_fundamentals.py  test_macro.py  test_metrics.py  test_news.py  test_price.py
tests/test_providers/: test_fred_provider.py  test_news_provider.py  test_yfinance_provider.py
tests/test_storage/: conftest.py  test_sqlite.py
